# NPL_STUDLOG

./: .gitignore  README.md  pyproject.toml  requirements.txt
Exercise_list/List_1/: List_1.ipynb  paa.ipynb
Exercise_list/List_2/: Dimensionality Reduction and Clustering.ipynb  TextClassification.ipynb  Topic_Modeling.ipynb  lista_2.ipynb
notebooks/: Deep Learning Text Search with Word2Vec, Doc2Vec, and LSTM .ipynb  Deep_Learning_Text_Search_with_Word2Vec_Doc2Vec_LSTM .ipynb  Dimensionality Reduction and Clustering.ipynb  Dimensionality_Reduction_and_Clustering.ipynb  Exploring_BERT_GPT2.ipynb  Text Classification.ipynb  Text_Processing_and_Analysis.ipynb  Topic_Modeling.ipynb
scripts/: ulteis.py
