[tool.poetry]
name = "pln"
version = "0.1.0"
description = ""
authors = ["Edeilson Azevedo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
